chore: change default language
Signed-off-by: Clément Nussbaumer <clement@astutus.org>

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,6 @@
 baseURL: 'https://clement.n8r.ch/'
-languageCode: fr-FR
 
-defaultContentLanguage: fr
+defaultContentLanguage: en
 languages:
   fr:
     disabled: false
