fix: enable math
Signed-off-by: Clément Nussbaumer <clement@astutus.org>

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -55,6 +55,7 @@ params:
   defaultTheme: light
   disableThemeToggle: true
   displayFullLangName: true
+  math: true
 
   ShowReadingTime: true
   # ShowShareButtons: true
