feat: add talks section
inspired by
https://github.com/rochaporto/ricardorocha.io/blob/master/layouts/section/talk.html

Signed-off-by: Clément Nussbaumer <clement.nussbaumer@postfinance.ch>

--- a/config/_default/menus.en.yaml
+++ b/config/_default/menus.en.yaml
@@ -4,6 +4,10 @@ main:
     name: articles
     url: /articles
     weight: 10
+  - identifier: talks
+    name: talks
+    url: /talks
+    weight: 10
   - identifier: tags
     name: tags
     url: /tags
