--- a/hugo.yaml
+++ b/hugo.yaml
@@ -128,7 +128,7 @@ markup:
     # codeFences: true
     # guessSyntax: true
     # lineNos: true
-    # style: monokai
+    style: catppuccin-latte
 
 outputs:
   home:
